# pkg-check

./: .gitignore  README.md  main.py  pyproject.toml  requests_data.json  requests_data1.json  requests_data2.json  response_requests.json  test_npm.py  tests.py
core/: aur_checker.py  checker_base.py  npm_checker.py  package.py  pip_checker.py  pypi_checker.py
core/checkers/: npm_checker.py
core/parsers/: npm_parser.py  pypi_parser.py
parsers/: exporter.py
